--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <body class ="container">
     <nav class="top-nav-container">
         <section id="nav-about" class="nav nav-row-start ">
-            <ul>
+            <ul class="top-list-center">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Store</a></li>
             </ul>
         </section>
         <section id="nav-tools" class="nav nav-row-end">
-            <ul>
+            <ul class="top-list-center">
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
                 <li><a href="#"><svg class="more-tools-icon" focusable="false" viewBox="0 0 24 24"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg></a></li>
